# bidder

./: Anchor.toml  README.md  package.json
app/: package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/api/sol-price/: route.ts
app/components/dialogs/: bid-dialog.tsx  hiw-dialog.tsx  last-pool-dialog.tsx
app/components/provider/: query-provider.tsx  rpc-provider.tsx  wallet-provider.tsx
app/components/ui/: button.tsx  dialog.tsx
programs/bidder/: Cargo.toml
programs/bidder/src/: close.rs  entry.rs  lib.rs  payout.rs  resolve.rs  select.rs  states.rs
tests/: bidder.ts
