[package]
name = "bidder"
version = "0.1.1"
description = "Win it all"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bidder"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
switchboard-on-demand = "0.11.3"
